--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -38,7 +38,7 @@ jobs:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: true
         with:
           service_account_key: ${{secrets.GKE_SA_KEY}}
-          project_id: ${{secrets.GKE.PROJECT}}
+          project_id: ${{secrets.GKE_PROJECT}}
 
 
 
