--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -13,24 +13,12 @@ env:
 
 jobs:
   build:
-#     name: Setup Build Publsh Deploy
 
     runs-on: ubuntu-latest
 
     steps:
 
-      # - name: Chekout Repo
-      #   uses: actions/checkout@v2
-
-      # - name: Setup JDK 1.8
-      #   uses: actions/setup-java@v1
-      #   with:
-      #     java-version: 1.8
-      #     server-id: github
-      #     settings-path: ${{github.workspace}}
-
-      # - name: Build with Maven
-      #   run: nvm clean package -DskipTests
+     
 
       - name: Setup Google Cloud CLI
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@0.1.3
@@ -62,7 +50,7 @@ jobs:
 
       - name: Deploy Genhub App
         run: |-
-          helm upgrade --install app dirigible/dirigible -n dirigible-demo \
+          helm upgrade --install gen dirigible/dirigible -n dirigible-demo \
           --set volume.enabled=true \
           --set serviceAccount.create=false \
           --set keycloak.serviceAccountCreate=false \
@@ -74,7 +62,8 @@ jobs:
           --set gke.cloudSQL=true \
           --set gke.projectId=genetic-platform \
           --set gke.region=europe-north1 \
-          --set ingress.host=gen.apps.quanterall.com \
+          --set ingress.host=apps.quanterall.com \
+          --set keycloak.name=keycloak-gen \
           --set gke.dirigibleSqlInstanceName=genhub \
           --set gke.keycloakSqlInstanceName=keycloak \
           --set dirigible.image=ghcr.io/codbex/codbex-genetyllis-keycloack-runtime:latest
